# fortify-health-JE

./: pyproject.toml  requirements.txt
models/: model.pth
src/fortify/: data.py  evaluate.py  model.py  train.py
src/fortify_assessment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
