[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fortify-assessment"
version = "0.0.1"
description = "MNIST classifier for internship applicatoin"
authors = [
  { name = "jae", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
lint.select = ["I"]
line-length=120
[tool.coverage.run]
omit = ["tests/*"]
